Tests/a1/reject/26.ul
int main (int x) {
	xx = x = s;
}